[package]
name = "pyo3-mp"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

description = "Rust bindings for Python multiprocessing module"
keywords = ["pyo3", "python", "multiprocessing"]

homepage = "https://github.com/kerryeon/pyo3-mp"
repository = "https://github.com/kerryeon/pyo3-mp"
documentation = "https://docs.rs/crate/pyo3-mp/"

license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.12"
